--- a/dsgrid_project/dimension_mappings.toml
+++ b/dsgrid_project/dimension_mappings.toml
@@ -1,35 +1,35 @@
 [[mappings]]
-description = "Maps Comstock US Counties 2020 to CensusRegion"
+description = "Maps Comstock US Counties 2020 L48 to CensusRegion"
 file = "dimension_mappings/base_to_supplemental/lookup_county_to_censusregion.csv"
 [mappings.from_dimension]
-dimension_id = ""
+dimension_id = "us_counties_2020_l48__3f48928c-e700-4e1d-b7fb-c35a52d076a0"
 type = "geography"
 version = "1.0.0"
 [mappings.to_dimension]
-dimension_id = ""
+dimension_id = "us_census_regions__81589d89-7575-4ac2-8ee3-4a3f24e1595f"
 type = "geography"
 version = "1.0.0"
 
 [[mappings]]
-description = "Maps Comstock US Counties 2020 to CensusDivision"
+description = "Maps Comstock US Counties 2020 L48 to CensusDivision"
 file = "dimension_mappings/base_to_supplemental/lookup_county_to_censusdivision.csv"
 [mappings.from_dimension]
-dimension_id = ""
+dimension_id = "us_counties_2020_l48__3f48928c-e700-4e1d-b7fb-c35a52d076a0"
 type = "geography"
 version = "1.0.0"
 [mappings.to_dimension]
-dimension_id = ""
+dimension_id = "us_census_divisions__c98c6bb0-5c5a-4d36-971e-5082cb453cea"
 type = "geography"
 version = "1.0.0"
 
 [[mappings]]
-description = "Maps Comstock US Counties 2020 to State"
+description = "Maps Comstock US Counties 2020 L48 to State"
 file = "dimension_mappings/base_to_supplemental/lookup_county_to_state.csv"
 [mappings.from_dimension]
-dimension_id = ""
+dimension_id = "us_counties_2020_l48__3f48928c-e700-4e1d-b7fb-c35a52d076a0"
 type = "geography"
 version = "1.0.0"
 [mappings.to_dimension]
-dimension_id = ""
+dimension_id = "us_states__caef7924-b019-4081-a08f-5da8f451ed23"
 type = "geography"
 version = "1.0.0"
