updated all comstock dim, except time

--- a/dsgrid_project/datasets/sector_models/comstock/dimensions.toml
+++ b/dsgrid_project/datasets/sector_models/comstock/dimensions.toml
@@ -6,6 +6,7 @@ type = "geography"
 name = "conus_2022-comstock_US_county_FIP"
 file = "dimensions/conus_2022-comstock_geography.csv"
 module = "dsgrid.dimension.standard"
+class = "County"
 description = """
 CONUS 2022 - ComStock US county in original FIP code (N=3,060), ComStock not in 48 counties.
 """
@@ -17,7 +18,7 @@ file = "dimensions/sector_commercial.csv"
 module = "dsgrid.dimension.standard"
 class = "Sector"
 description = """
-Commercial sector
+Commercial sector only
 """
 
 [[dimensions]]
@@ -25,14 +26,14 @@ type = "subsector"
 name = "conus_2022-comstock_building_types"
 file = "dimensions/conus_2022-comstock_subsectors.csv"
 module = "dsgrid.dimension.standard"
-class = "SubSector"
+class = "Subsector"
 description = """
 CONUS 2022 - ComStock building types (N=14)
 """
 
 [[dimensions]]
 type = "metric"
-name = "conus_2022-comstock_energy_enduses"
+name = "conus_2022-comstock_energy_enduses_kwh"
 file = "dimensions/conus_2022-comstock_end_uses.csv"
 module = "dsgrid.dimension.standard"
 class = "EnergyEndUse"
@@ -40,47 +41,47 @@ description = """
 CONUS 2022 - ComStock end uses (N=21, 4 fuel types)
 """
 
-[[dimensions]]
-type = "scenario"
-name = "Conus-2022"
-file = "dimensions/scenario_conus_2022.csv"
-module = "dsgrid.dimension.standard"
-class = "Scenario"
-description = """
-Scenario: CONUS 2022
-"""
+# [[dimensions]] # already exists
+# type = "scenario"
+# name = "Conus-2022"
+# file = "dimensions/scenario_conus_2022_reference.csv"
+# module = "dsgrid.dimension.standard"
+# class = "Scenario"
+# description = """
+# Scenario: CONUS (Continental U.S.) 2022 Reference
+# """
 
-[[dimensions]]
-type = "data_source"
-name = "Data-Source-comstock"
-file = "dimensions/data_source_comstock.csv"
-module = "dsgrid.dimension.standard"
-class = "Model"
-description = """
-Data source: ComStock
-"""
+# [[dimensions]] # already exists
+# type = "data_source"
+# name = "Data-Source-comstock"
+# file = "dimensions/data_source_comstock.csv"
+# module = "dsgrid.dimension.standard"
+# class = "Model"
+# description = """
+# Data source: ComStock
+# """
 
-[[dimensions]]
-type = "weather"
-name = "AMY-2012"
-file = "dimensions/weather_year_2012.csv"
-module = "dsgrid.dimension.standard"
-class = "Weather"
-description = """
-Weather year: AMY 2012
-"""
+# [[dimensions]] # already exists
+# type = "weather"
+# name = "AMY-2012"
+# file = "dimensions/weather_year_2012.csv"
+# module = "dsgrid.dimension.standard"
+# class = "Weather"
+# description = """
+# Weather year: AMY 2012
+# """
 
-[[dimensions]]
-type = "model_year"
-name = "Model-Year-2018"
-file = "dimensions/model_year_2018.csv"
-module = "dsgrid.dimension.standard"
-class = "ModelYear"
-description = """
-Model year: 2018
-"""
+# [[dimensions]] # already exists
+# type = "model_year"
+# name = "Model-Year-2018"
+# file = "dimensions/model_year_2018.csv"
+# module = "dsgrid.dimension.standard"
+# class = "ModelYear"
+# description = """
+# Model year: 2018
+# """
 
-[[dimensions]]
+[[dimensions]] # FIXME
 name = "Time-2012-UTC-8760-hourly-periodEnding-dropDec31-total-Hour5Start"
 type = "time"
 module = "dsgrid.dimension.standard"
