--- a/dsgrid_project/datasets/sector_models/comstock/dataset.toml
+++ b/dsgrid_project/datasets/sector_models/comstock/dataset.toml
@@ -6,7 +6,7 @@ dataset_id = "conus-2022-comstock"
 dataset_type = "sector_model"
 data_source = "ComStock"
 
-path = "/Users/dthom/.dsgrid-data/efs_comstock" # FIXME
+path = "/Users/lliu2/Downloads/end_use_processed_com" # FIXME
 description = """
 Simulated on 09/29/2021 using: 
 Comstock SHA: 00a3f79bab74d7fb8b71e7897486eb54b51277fc and
@@ -24,7 +24,7 @@ origin_date = "2021-09-29"
 origin_version = "0.1.0"
 source = "s3://eulp/simulation_output/regional_runs/comstock/com_dsgrid_full_2/com_dsgrid_full_2/"
 data_classification = "low"
-tags = [ "commercial", "conus-2022", "dsgrid_v0.2.0", "standard_scenarios"]
+tags = [ "commercial", "conus-2022", "reference", "dsgrid_v0.2.0", "standard_scenarios"]
 data_schema_type = "standard"
 trivial_dimensions = [ "weather_year", "model_year", "scenario", "data_source"]
 
@@ -53,27 +53,25 @@ version = ""
 
 [[dimensions]]
 type = "data_source"
-dimension_id = ""
+dimension_id = "comstock_data_source__2ecde85e-5896-43b5-95ce-725bdd2f40a0"
 version = ""
 
 [[dimensions]]
 type = "scenario"
-dimension_id = ""
+dimension_id = "conus-2022-reference__a90f3ea4-b0ed-4c08-a15a-242fb802b156"
 version = ""
 
 [[dimensions]]
 type = "weather"
-dimension_id = ""
+dimension_id = "2012_weather_year__78aeebf8-788c-4ffa-8df2-f581cf0e4d96"
 version = ""
 
 [[dimensions]]
 type = "model_year"
-dimension_id = ""
+dimension_id = "model-year-2018__055f9044-b09b-4372-830c-b6f08dd7ecc1"
 version = ""
 
 [[dimensions]]
 type = "time"
 dimension_id = ""
 version = ""
-
-# data_class = "low"
