--- a/dsgrid_project/datasets/sector_models/comstock/dimensions.toml
+++ b/dsgrid_project/datasets/sector_models/comstock/dimensions.toml
@@ -58,7 +58,7 @@ CONUS 2022 - ComStock end uses (N=21, 4 fuel types)
 # name = "Data-Source-comstock"
 # file = "dimensions/data_source_comstock.csv"
 # module = "dsgrid.dimension.standard"
-# class = "Model"
+# class = "DataSource"
 # description = """
 # Data source: ComStock
 # """
