--- a/dsgrid_project/datasets/sector_models/tempo/dimensions.toml
+++ b/dsgrid_project/datasets/sector_models/tempo/dimensions.toml
@@ -1,23 +1,20 @@
 
-
+# TODO: needs a mapping probably
 [[dimensions]]
 class = "County"
 type = "geography"
-name = "ACS County 2018"
+name = "ACS County 2018"  #TODO: is this L48 only? 
 file = "dimensions/counties.csv"
 description = """
-American Community Survey US counties, 2018.
-"""
+American Community Survey US counties, 2018.""" #TODO: is this L48 only? 
 
 [[dimensions]]
 class = "Sector"
 type = "sector"
-name = "TEMPO LDV BEV Charging"
-file = "dimensions/tempo.csv"
-description = """
-TEMPO provides LDV BEV charging profiles.
-"""
-#trivial = true
+name = "Transportation Sector"
+file = "dimensions/sector.csv"
+description = """Transportation Sector"""
+
 
 [[dimensions]]
 class = "Subsector"
@@ -32,61 +29,18 @@ This is a cross-join of the following supplemental dimensions:
 * Income
 * Urbanity
 * Class
-* Tech
-"""
+* Tech"""
 
-# [[dimensions]]
-# type = "subsector"
-# name = "Composition"
-# file = "dimensions/supplemental/composition.csv"
-# description = """
-# Household composition.
-# """
-# 
-# [[dimensions]]
-# type = "subsector"
-# name = "Income"
-# file = "dimensions/supplemental/income.csv"
-# description = """
-# Income range.
-# """
-# 
-# [[dimensions]]
-# type = "subsector"
-# name = "Urbanity"
-# file = "dimensions/supplemental/urbanity.csv"
-# description = """
-# Urban classifications, according to [Claritas definitions](https://healthpolicy.ucla.edu/chis/data/public-use-data-file/Documents/2003PUF_constructs_c.pdf#page=24).
-# """
-# 
-# [[dimensions]]
-# type = "subsector"
-# name = "Class"
-# file = "dimensions/supplemental/class.csv"
-# description = """
-# Passenger vehicle class.
-# """
-# 
-# [[dimensions]]
-# type = "subsector"
-# name = "Tech"
-# file = "dimensions/supplemental/tech.csv"
-# description = """
-# Vehicle technology.
-# """
 
+# change this to metric
 [[dimensions]]
-class = "EndUse"
-type = "end_use"
-name = "TEMPO LDV BEV Usage"
+class = "EnergyEndUse"
+type = "metric"
+name = "TEMPO LDV BEV Usage" #TODO: Name??
 file = "dimensions/end_use.csv"
 description = """
-Fuels used by TEMPO BEVs.
-"""
+Fuels used by TEMPO BEVs.""" # TODO: check these descriptions
 
-#[[dimensions]]
-#class = "MetricType"
-# dsgrid assumes trivial when not specified in dataset/here
 
 [[dimensions]]
 class = "Time"
@@ -98,18 +52,16 @@ time_type = "representative_period"
 measurement_type = "total"
 format = "one_week_per_month_by_hour"
 description = """
-Month, day of week, and time of day.
-"""
+TEMPO Time - Month, day of week, and time of day.""" # TODO: is there a better description for this?
 
 
 [[dimensions]]
 class = "DataSource"
 type = "data_source"
 name = "TEMPO Model"
-file = "dimensions/model.csv"
+file = "dimensions/data_source.csv"
 description = """
-TEMPO projections.
-"""
+TEMPO model"""
 
 
 [[dimensions]]
@@ -118,28 +70,14 @@ type = "model_year"
 name = "TEMPO Model Year"
 file = "dimensions/year.csv"
 description = """
-TEMPO modeling years.
-"""
+TEMPO modeling years for CONUS 2022 project, 2018-2050"""
 
 
-# check how many scenarios we're submitting
-[[dimensions]]
-class = "Scenario"
-type = "scenario"
-name = "TEMPO Scenario"
-file = "dimensions/scenario.csv"
-description = """
-TEMPO base scenario only.
-"""
-
-
-# trivial
-[[dimensions]]
-class = "WeatherYear"
-type = "weather_year"
-name = "TEMPO Weather Year"
-file = "dimensions/weather.csv"
-description = """
-Weather year used by TEMPO.
-"""
-
+# TODO: uncomment this when ready to submit the final dataset
+# [[dimensions]]
+# class = "Scenario"
+# type = "scenario"
+# name = "TEMPO Scenario"
+# file = "dimensions/scenario.csv"
+# description = """
+# TEMPO CONUS 2022 scenarios."""
