--- a/dsgrid_project/datasets/sector_models/tempo/dataset.toml
+++ b/dsgrid_project/datasets/sector_models/tempo/dataset.toml
@@ -23,37 +23,37 @@ trivial_dimensions = [ "sector", "weather_year", "scenario", "data_source"] # TO
 
 [[dimensions]]
 type = "geography"
-dimension_id = "" # TODO: The registration process will provide this.
+dimension_id = "acs_county_2018__7c9da8d6-0d75-46e3-a399-c7e30207f36a"
 version = "1.0.0"
 
 [[dimensions]]
 type = "subsector"
-dimension_id = "" # TODO: The registration process will provide this.
+dimension_id = "tempo_bin__a03837f6-e58f-4904-aac3-3d3e1a9366a3"
 version = "1.0.0"
 
 [[dimensions]]
 type = "metric"
-dimension_id = "" # TODO: The registration process will provide this.
+dimension_id = "tempo_ldv_pev_usage__83635a2e-d23c-4e46-8e06-ec6fc8a040a5"
 version = "1.0.0"
 
 [[dimensions]]
 type = "time"
-dimension_id = "" # TODO: The registration process will provide this.
+dimension_id = "time_of_week_by_month__3ea433b1-7df3-4a32-8ea3-e124922b32cb"
 version = "1.0.0"
 
-[[dimensions]] # TODO: needs a dataset-to-project mapping
+[[dimensions]]
 type = "model_year"
-dimension_id = "" # TODO: The registration process will provide this.
+dimension_id = "tempo_model_year__ad1a865a-4517-4a40-be96-f8f904087ea9"
 version = "1.0.0"
 
 [[dimensions]]
 type = "data_source"
-dimension_id = "" # TODO: The registration process will provide this.
+dimension_id = "tempo_model__876c1fbf-04ea-4aa9-bddd-510f150189dc"
 version = "1.0.0"
 
 [[dimensions]]
 type = "sector"
-dimension_id = ""  # TODO: The registration process will provide this.
+dimension_id = "transportation_sector__2eaa6396-c666-456d-b8ed-cf3a37c08199"
 version = "1.0.0"
 
 [[dimensions]]
@@ -70,6 +70,6 @@ version = "1.0.0"
 # TODO: uncomment and add registered scenario dimension for final-dataset
 # [[dimensions]]
 # type = "scenario"
-# dimension_id = ""
+# dimension_id = "dsgrid_conus_2022_scenarios__fcfa2979-d6c7-4811-9879-4ba09fe86777"
 # version = "1.0.0"
 
